added snooze indicator
